# Meadows

./: Cargo.toml  README.md
src/: app.rs  field.rs  main.rs  physics.rs
src/app/: renderer.rs
src/app/shaders/: shader.wgsl
src/gpu/rendering/: renderer.rs
src/gpu/rendering/shaders/: shader.wgsl
src/physics/: bc.rs  electromagnetics.rs  fdtd.rs  material.rs  mesh.rs  utils.rs
src/solvers/: fdtd.rs
