[package]
name = "meadows"
version = "0.1.0"
edition = "2021"
authors = ["Robbie Alexander <rob.alexander.115@gmail.com>"]
description = "Finite Difference Time Domain Simulation in Rust"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.30.1", features = ["rwh_05"] }
env_logger = "0.11.3"
log = "0.4"
wgpu = "0.20.1"
pollster = "0.3"
bytemuck = { version = "1.12", features = [ "derive" ] }
cgmath = "0.18"
rand = "0.8.5"
